apps/monitoring/glance/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  labels:
    app: glance
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: glance
  type: ClusterIP
